[gd_scene load_steps=3 format=3 uid="uid://cp01bntw511ot"]

[ext_resource type="Script" uid="uid://busfdihmng7y8" path="res://Scripts/done.gd" id="1_3khuf"]

[sub_resource type="CanvasTexture" id="CanvasTexture_3khuf"]

[node name="Done" type="Node2D"]
script = ExtResource("1_3khuf")

[node name="Camera" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.0196078, 0, 0.0392157, 1)
position = Vector2(-3.05176e-05, 1.52588e-05)
scale = Vector2(1456, 656)
texture = SubResource("CanvasTexture_3khuf")

[node name="NewProcess" type="Button" parent="."]
offset_left = -688.0
offset_top = 72.0
offset_right = -368.0
offset_bottom = 256.0
tooltip_text = "Return to the Starting Menu"
focus_neighbor_left = NodePath("../Close")
focus_neighbor_right = NodePath("../Clear")
focus_next = NodePath("../Clear")
focus_previous = NodePath("../Close")
theme_override_font_sizes/font_size = 40
text = "Return to Start"

[node name="Clear" type="Button" parent="."]
offset_left = -336.0
offset_top = 72.0
offset_right = -16.0
offset_bottom = 256.0
tooltip_text = "Cleans the Temp Folder."
focus_neighbor_left = NodePath("../NewProcess")
focus_neighbor_right = NodePath("../OpenOutputFolder")
focus_next = NodePath("../OpenOutputFolder")
focus_previous = NodePath("../NewProcess")
theme_override_font_sizes/font_size = 40
text = "Clear Temp Folder"

[node name="OpenOutputFolder" type="Button" parent="."]
offset_left = 16.0
offset_top = 72.0
offset_right = 336.0
offset_bottom = 256.0
tooltip_text = "Opens the Output Folder."
focus_neighbor_left = NodePath("../Clear")
focus_neighbor_right = NodePath("../Close")
focus_next = NodePath("../Close")
focus_previous = NodePath("../Clear")
theme_override_font_sizes/font_size = 40
text = "Open Output Folder"

[node name="Close" type="Button" parent="."]
offset_left = 368.0
offset_top = 72.0
offset_right = 688.0
offset_bottom = 256.0
tooltip_text = "Exits the Program. Bye bye!"
focus_neighbor_left = NodePath("../OpenOutputFolder")
focus_neighbor_right = NodePath("../NewProcess")
focus_next = NodePath("../NewProcess")
focus_previous = NodePath("../OpenOutputFolder")
theme_override_font_sizes/font_size = 40
text = "Close Program"

[node name="CommandOutput" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = -688.0
offset_top = -272.0
offset_right = 688.0
focus_neighbor_left = NodePath("../Clear")
focus_neighbor_top = NodePath("../Clear")
focus_neighbor_right = NodePath("../Close")
focus_neighbor_bottom = NodePath("../Clear")
focus_next = NodePath("../Clear")
focus_previous = NodePath("../Close")
theme_override_font_sizes/font_size = 45
placeholder_text = " Processing...
(This may take a while depending on how long and complex the File is)"
editable = false

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
title = ".png and .import files found"
initial_position = 4
size = Vector2i(545, 112)
ok_button_text = "Cleanup"
dialog_text = "This usually indicates leftover Frames in the Frames Folder.
Would you like to remove them?"
cancel_button_text = "Exit without Cleanup"

[connection signal="pressed" from="NewProcess" to="." method="_on_new_process_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="OpenOutputFolder" to="." method="_on_open_output_folder_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
